files with the csv initial

--- a/tutorial_trial.ipynb
+++ b/tutorial_trial.ipynb
@@ -2,49 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3e7066e3-2f47-46b8-8be3-4d1ced73bdd2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ajibola_linux/miniconda3/envs/cadd/lib/python3.9/site-packages/chembl_webresource_client/__init__.py:4: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('chembl_webresource_client').version\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   molecule_chembl_id molecule_pref_name parent_molecule_chembl_id  \\\n",
-      "0        CHEMBL574738            AST-487              CHEMBL574738   \n",
-      "1        CHEMBL522892          DOVITINIB              CHEMBL522892   \n",
-      "2        CHEMBL607707          PELITINIB              CHEMBL607707   \n",
-      "3        CHEMBL191003        JNJ-7706621              CHEMBL191003   \n",
-      "4        CHEMBL608533        MIDOSTAURIN              CHEMBL608533   \n",
-      "..                ...                ...                       ...   \n",
-      "95      CHEMBL5276146               None             CHEMBL5276146   \n",
-      "96      CHEMBL5286173               None             CHEMBL5286173   \n",
-      "97      CHEMBL5279218               None             CHEMBL5279218   \n",
-      "98      CHEMBL5278528               None             CHEMBL5278528   \n",
-      "99      CHEMBL5276146               None             CHEMBL5276146   \n",
+      "    molecule_chembl_id molecule_pref_name parent_molecule_chembl_id  \\\n",
+      "0         CHEMBL574738            AST-487              CHEMBL574738   \n",
+      "1         CHEMBL522892          DOVITINIB              CHEMBL522892   \n",
+      "2         CHEMBL607707          PELITINIB              CHEMBL607707   \n",
+      "3         CHEMBL191003        JNJ-7706621              CHEMBL191003   \n",
+      "4         CHEMBL608533        MIDOSTAURIN              CHEMBL608533   \n",
+      "..                 ...                ...                       ...   \n",
+      "103      CHEMBL5653589               None             CHEMBL5653589   \n",
+      "104      CHEMBL4554938               None             CHEMBL4554938   \n",
+      "105      CHEMBL4554938               None             CHEMBL4554938   \n",
+      "106       CHEMBL388978      STAUROSPORINE              CHEMBL388978   \n",
+      "107       CHEMBL388978      STAUROSPORINE              CHEMBL388978   \n",
       "\n",
-      "   pchembl_value target_chembl_id                    target_pref_name   value  \n",
-      "0           5.92       CHEMBL5552  Serine/threonine-protein kinase 25  1200.0  \n",
-      "1           5.92       CHEMBL5552  Serine/threonine-protein kinase 25  1200.0  \n",
-      "2           5.47       CHEMBL5552  Serine/threonine-protein kinase 25  3400.0  \n",
-      "3           6.44       CHEMBL5552  Serine/threonine-protein kinase 25   360.0  \n",
-      "4           5.75       CHEMBL5552  Serine/threonine-protein kinase 25  1800.0  \n",
-      "..           ...              ...                                 ...     ...  \n",
-      "95          6.64       CHEMBL5552  Serine/threonine-protein kinase 25   228.0  \n",
-      "96          6.06       CHEMBL5552  Serine/threonine-protein kinase 25   865.0  \n",
-      "97          5.29       CHEMBL5552  Serine/threonine-protein kinase 25  5160.0  \n",
-      "98          6.21       CHEMBL5552  Serine/threonine-protein kinase 25   616.0  \n",
-      "99          6.68       CHEMBL5552  Serine/threonine-protein kinase 25   211.0  \n",
+      "    pchembl_value target_chembl_id                      target_pref_name  \\\n",
+      "0            5.92       CHEMBL5552    Serine/threonine-protein kinase 25   \n",
+      "1            5.92       CHEMBL5552    Serine/threonine-protein kinase 25   \n",
+      "2            5.47       CHEMBL5552    Serine/threonine-protein kinase 25   \n",
+      "3            6.44       CHEMBL5552    Serine/threonine-protein kinase 25   \n",
+      "4            5.75       CHEMBL5552    Serine/threonine-protein kinase 25   \n",
+      "..            ...              ...                                   ...   \n",
+      "103          5.37    CHEMBL1075195  Serine/threonine-protein kinase TAO2   \n",
+      "104          7.00    CHEMBL1075195  Serine/threonine-protein kinase TAO2   \n",
+      "105          6.87    CHEMBL1075195  Serine/threonine-protein kinase TAO2   \n",
+      "106          8.62       CHEMBL5552    Serine/threonine-protein kinase 25   \n",
+      "107          8.36    CHEMBL1075195  Serine/threonine-protein kinase TAO2   \n",
       "\n",
-      "[100 rows x 7 columns]\n"
+      "        value  \n",
+      "0      1200.0  \n",
+      "1      1200.0  \n",
+      "2      3400.0  \n",
+      "3       360.0  \n",
+      "4      1800.0  \n",
+      "..        ...  \n",
+      "103  4266.301  \n",
+      "104     100.0  \n",
+      "105     134.0  \n",
+      "106      2.41  \n",
+      "107      4.35  \n",
+      "\n",
+      "[108 rows x 7 columns]\n"
      ]
     }
    ],
@@ -64,7 +69,8 @@
     "    .only(['target_chembl_id', 'target_pref_name', 'parent_molecule_chembl_id', 'molecule_chembl_id', 'molecule_pref_name', 'pchembl_value'])\n",
     "\n",
     "df = pd.DataFrame(res)\n",
-    "print(df)"
+    "print(df)\n",
+    "df.to_csv('tutorial_yt_file.csv')"
    ]
   },
   {
