--- a/final.ipynb
+++ b/final.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "69ac5695-45f1-402f-8ff9-262f75090a6b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ajibola_linux/miniconda3/envs/cadd/lib/python3.9/site-packages/chembl_webresource_client/__init__.py:4: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('chembl_webresource_client').version\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -39,33 +31,61 @@
       "17    Cavia porcellus    CHEMBL2111465\n",
       "18  Rattus norvegicus    CHEMBL3038507\n",
       "19    Cavia porcellus    CHEMBL3038518\n",
-      "    action_type assay_type molecule_chembl_id parent_molecule_chembl_id  \\\n",
-      "0          None          B        CHEMBL38904               CHEMBL38904   \n",
-      "1          None          B        CHEMBL67010               CHEMBL67010   \n",
-      "2          None          B       CHEMBL542638             CHEMBL1191528   \n",
-      "3          None          B        CHEMBL45962               CHEMBL45962   \n",
-      "4          None          B        CHEMBL45686               CHEMBL45686   \n",
-      "..          ...        ...                ...                       ...   \n",
-      "595        None          B       CHEMBL118797              CHEMBL118797   \n",
-      "596        None          B       CHEMBL290675              CHEMBL290675   \n",
-      "597        None          B        CHEMBL60542               CHEMBL60542   \n",
-      "598        None          B       CHEMBL287794              CHEMBL287794   \n",
-      "599        None          B        CHEMBL41313               CHEMBL41313   \n",
+      "                      action_type  max_phase molecule_chembl_id  \\\n",
+      "0                      ANTAGONIST          4         CHEMBL1231   \n",
+      "1                      ANTAGONIST          4          CHEMBL728   \n",
+      "2                      ANTAGONIST          4        CHEMBL14376   \n",
+      "3                      ANTAGONIST          4         CHEMBL1671   \n",
+      "4   POSITIVE ALLOSTERIC MODULATOR          4      CHEMBL1200776   \n",
+      "5                       INHIBITOR          4      CHEMBL1615374   \n",
+      "6                 PARTIAL AGONIST          4      CHEMBL1615374   \n",
+      "7                      ANTAGONIST          4           CHEMBL54   \n",
+      "8                      ANTAGONIST          4        CHEMBL14376   \n",
+      "9                         AGONIST          4          CHEMBL596   \n",
+      "10                     ANTAGONIST          4         CHEMBL1671   \n",
+      "11                     ANTAGONIST          4         CHEMBL1231   \n",
+      "12                INVERSE AGONIST          4           CHEMBL54   \n",
+      "13                      MODULATOR          2      CHEMBL2107572   \n",
+      "14                        AGONIST          3       CHEMBL209821   \n",
+      "15                      MODULATOR          3       CHEMBL596802   \n",
+      "16                           None          4      CHEMBL1909072   \n",
+      "17                     ANTAGONIST          4        CHEMBL22242   \n",
+      "18                        BLOCKER          4       CHEMBL404849   \n",
+      "19                      INHIBITOR          4       CHEMBL187709   \n",
+      "20                           None          3       CHEMBL253376   \n",
+      "21                        BLOCKER          2        CHEMBL43064   \n",
+      "22                     ANTAGONIST          2        CHEMBL43064   \n",
+      "23                INVERSE AGONIST          4      CHEMBL4164059   \n",
+      "24                      MODULATOR          3          CHEMBL954   \n",
+      "25                      MODULATOR          4           CHEMBL81   \n",
       "\n",
-      "    pchembl_value                           target_pref_name  type value  \n",
-      "0            7.70  Sigma non-opioid intracellular receptor 1    Ki  20.0  \n",
-      "1            7.14  Sigma non-opioid intracellular receptor 1  IC50  72.0  \n",
-      "2            8.22  Sigma non-opioid intracellular receptor 1  IC50   6.0  \n",
-      "3            7.47  Sigma non-opioid intracellular receptor 1    Ki  34.0  \n",
-      "4            7.72  Sigma non-opioid intracellular receptor 1    Ki  19.0  \n",
-      "..            ...                                        ...   ...   ...  \n",
-      "595          8.37  Sigma non-opioid intracellular receptor 1    Ki   4.3  \n",
-      "596          7.70  Sigma non-opioid intracellular receptor 1    Ki  20.1  \n",
-      "597          8.21  Sigma non-opioid intracellular receptor 1    Ki   6.1  \n",
-      "598          8.23  Sigma non-opioid intracellular receptor 1    Ki   5.9  \n",
-      "599          8.02  Sigma non-opioid intracellular receptor 1    Ki   9.6  \n",
-      "\n",
-      "[600 rows x 8 columns]\n"
+      "   parent_molecule_chembl_id  \n",
+      "0                 CHEMBL1231  \n",
+      "1                  CHEMBL728  \n",
+      "2                CHEMBL14376  \n",
+      "3                   CHEMBL27  \n",
+      "4              CHEMBL1201284  \n",
+      "5               CHEMBL439849  \n",
+      "6               CHEMBL439849  \n",
+      "7                   CHEMBL54  \n",
+      "8                CHEMBL14376  \n",
+      "9                  CHEMBL596  \n",
+      "10                  CHEMBL27  \n",
+      "11                CHEMBL1231  \n",
+      "12                  CHEMBL54  \n",
+      "13              CHEMBL292376  \n",
+      "14              CHEMBL209821  \n",
+      "15              CHEMBL596802  \n",
+      "16             CHEMBL1909072  \n",
+      "17               CHEMBL22242  \n",
+      "18              CHEMBL404849  \n",
+      "19              CHEMBL187709  \n",
+      "20              CHEMBL253376  \n",
+      "21               CHEMBL43064  \n",
+      "22               CHEMBL43064  \n",
+      "23              CHEMBL462605  \n",
+      "24                 CHEMBL954  \n",
+      "25                  CHEMBL81  \n"
      ]
     }
    ],
@@ -87,22 +107,41 @@
     "\n",
     "target_real= 'CHEMBL287'\n",
     "#finding all molecule thats bids t the target\n",
-    "\n",
+    "'''\n",
     "activities = activity.filter(target_chembl_id= [target_real]\n",
     "                             , pchembl_value__gte = 7\n",
     "                             , assay_type = 'B')\\\n",
-    "                             .only('target_pref_name','pchembl_value', 'assay_type', 'molecule_chembl_id', 'parent_molecule_chembl_id', 'action_type' )\n",
+    "                             .only('pchembl_value', 'molecule_chembl_id', 'parent_molecule_chembl_id', 'molecule_pref_name', 'parent_molecule_pref_name' )\n",
     "df = pd.DataFrame(activities)\n",
     "print(df)\n",
     "\n",
     "\n",
-    "df.to_csv('target_file1.csv', index = False )"
+    "#df.to_csv('target_file1.csv', index = False )\n",
+    "\n",
+    "'''\n",
+    "molecule_df = pd.read_csv('target_file1.csv')\n",
+    "\n",
+    "molecules = molecule_df['molecule_chembl_id'].tolist()\n",
+    "\n",
+    "mec = mechanism.filter(molecule_chembl_id__in = molecules).only('action_type', 'max_phase', 'molecule_chembl_id', 'parent_molecule_chembl_id')\n",
+    "mec_df = pd.DataFrame(mec)\n",
+    "print(mec_df)\n",
+    "\n",
+    "mec_df.to_csv('target_molecule_chembl_id_V2.csv', index = False) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc3f4936-011e-4cb4-ad5b-08cdb19dbcca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "150c5a7d-c756-4a70-bc63-a01160d0b6c8",
    "metadata": {},
    "outputs": [],
    "source": []
